# ai-broker

./: .gitignore  application copy.py  application.py  knowledge_base.ipynb  prop_Search.ipynb  properties.db  pyproject.toml
kb_db/: chroma.sqlite3
vector_db/: chroma.sqlite3
